--- a/doggo/Base.lproj/Main.storyboard
+++ b/doggo/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController title="SplashScreen" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="doggo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -619,6 +619,18 @@
                                     <navigationItem title="Pug" id="2JQ-5w-A01"/>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQH-ei-Szl">
+                                <rect key="frame" x="20" y="278" width="374" height="211"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">About: The Pug’s motto is the Latin phrase “multum in parvo” (a lot in a little)—an apt description of this small but muscular breed. They come in three colors: silver or apricot-fawn with a black face mask, or all black. The large round head, the big, sparkling eyes, and the wrinkled brow give Pugs a range of human-like expressions—surprise, happiness, curiosity—that have delighted owners for centuries.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How-Long-Do-Pugs-Live-long.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TaA-Pt-6HG">
+                                <rect key="frame" x="0.0" y="44" width="414" height="244"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="GGB-gl-TPW"/>
@@ -626,7 +638,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ibq-VR-mg1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3916" y="323"/>
+            <point key="canvasLocation" x="3915.9420289855075" y="322.76785714285711"/>
         </scene>
         <!--Scanner-->
         <scene sceneID="vi8-o8-fJH">
@@ -682,6 +694,18 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D20-xO-JMC">
+                                <rect key="frame" x="20" y="690" width="374" height="29"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Label">
+                                        <attributes>
+                                            <font key="NSFont" size="24" name="GillSans-SemiBold"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -689,6 +713,7 @@
                             <constraint firstItem="HJe-3N-rTA" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" id="Duc-nh-JZo"/>
                             <constraint firstItem="BVY-6C-5Aa" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" constant="55" id="GqK-Ls-1dL"/>
                             <constraint firstItem="BVY-6C-5Aa" firstAttribute="top" secondItem="ZuW-ar-3rz" secondAttribute="bottom" constant="50" id="HrD-Pz-9dq"/>
+                            <constraint firstItem="gwm-uf-zyN" firstAttribute="trailing" secondItem="D20-xO-JMC" secondAttribute="trailing" constant="20" id="PCd-XM-qDL"/>
                             <constraint firstItem="ZuW-ar-3rz" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" constant="87" id="cKq-HJ-XoN"/>
                             <constraint firstItem="YmN-fB-mXq" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" id="cbq-Pr-APP"/>
                             <constraint firstItem="HJe-3N-rTA" firstAttribute="top" secondItem="aZ8-bH-DEf" secondAttribute="top" id="ee1-3J-geo"/>
@@ -696,6 +721,8 @@
                             <constraint firstItem="ZuW-ar-3rz" firstAttribute="top" secondItem="HJe-3N-rTA" secondAttribute="bottom" constant="150" id="lCm-n6-V3M"/>
                             <constraint firstItem="gwm-uf-zyN" firstAttribute="trailing" secondItem="BVY-6C-5Aa" secondAttribute="trailing" constant="55" id="r6O-H6-ce8"/>
                             <constraint firstItem="gwm-uf-zyN" firstAttribute="trailing" secondItem="YmN-fB-mXq" secondAttribute="trailing" id="rtI-tz-mQx"/>
+                            <constraint firstItem="D20-xO-JMC" firstAttribute="top" secondItem="YmN-fB-mXq" secondAttribute="bottom" constant="1" id="sKY-Bg-hAe"/>
+                            <constraint firstItem="D20-xO-JMC" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" constant="20" id="wvP-Ht-ecR"/>
                             <constraint firstItem="gwm-uf-zyN" firstAttribute="bottom" secondItem="YmN-fB-mXq" secondAttribute="bottom" constant="70" id="xoO-cP-Ids"/>
                             <constraint firstItem="gwm-uf-zyN" firstAttribute="trailing" secondItem="ZuW-ar-3rz" secondAttribute="trailing" constant="87" id="zEu-UC-17H"/>
                         </constraints>
@@ -703,6 +730,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Scanner" image="camera" catalog="system" id="SCJ-Ez-Yfa"/>
                     <connections>
+                        <outlet property="Breed" destination="D20-xO-JMC" id="S62-4z-XZg"/>
                         <outlet property="PhotoLibrary" destination="nxV-vU-XNy" id="Kz4-Y3-2Ee"/>
                         <outlet property="animationView" destination="ZuW-ar-3rz" id="KBP-NU-uP9"/>
                         <outlet property="imageView" destination="YmN-fB-mXq" id="VUw-53-Cxo"/>
@@ -919,6 +947,7 @@
     </scenes>
     <resources>
         <image name="DoggoLogo.png" width="6016" height="1820"/>
+        <image name="How-Long-Do-Pugs-Live-long.jpg" width="1200" height="650"/>
         <image name="LabradorRetriever.png" width="197" height="198"/>
         <image name="ParsonRussellTerrier.png" width="197" height="198"/>
         <image name="boxer.png" width="197" height="198"/>
